--- a/web/static/style.css
+++ b/web/static/style.css
@@ -124,3 +124,13 @@ h2 {
 #option_button:hover {
     cursor: pointer;
 }
+
+footer p {
+    text-align: center;
+    color: #95A5A6;
+    font-size: 15px;
+}
+
+footer a {
+    color: #95A5A6;
+}
